--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,3 +2,4 @@ spring.datasource.url=jdbc:mysql://localhost:3306/eobaly
 spring.jpa.hibernate.ddl-auto=update
 spring.datasource.username=root
 spring.datasource.password=123
+spring.thymeleaf.cache=false
